--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,18 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.*
+.env.backup
 !.env.example
+
+# Environment files (sensitive data)
+backend/.env
+backend/.env.*
+frontend/.env
+frontend/.env.*
+*.env
+*.env.local
+*.env.production
+*.env.development
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -137,3 +148,12 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
